--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -43,7 +43,8 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.dbrizov.naughtyattributes": "2.1.4"
   },
   "scopedRegistries": [
     {
@@ -51,6 +52,7 @@
       "url": "https://package.openupm.com",
       "scopes": [
         "com.brunomikoski.animationsequencer",
+        "com.dbrizov.naughtyattributes",
         "com.openupm"
       ]
     }
